--- a/index.html
+++ b/index.html
@@ -31,41 +31,39 @@
                 <h4>What's Steeping at the Tea Cozy?</h4>
             </div>
             <div class="group">
-                <div class="img">
+                <figure>
                     <img src="./img/img-berryblitz.jpg" alt="">
-                    <h4>Fall Berry Blitz Tea</h4>
-                </div>
-                <div class="img">
+                    <figcaption>Fall Berry Blitz Tea</figcaption>
+                </figure>
+                <figure>
                     <img src="./img/img-spiced-rum.jpg" alt="">
-                    <h4>Spiced Rum Tea</h4>
-                </div>   
-                <div class="img">
+                    <figcaption>Spiced Rum Tea</figcaption>
+                </figure>   
+                <figure>
                     <img src="./img/img-donut.jpg" alt="">
-                    <h4>Seasonal Donuts</h4>
-                </div>
-            </div> 
-            <div class="group">
-                <div class="img">
+                    <figcaption>Seasonal Donuts</figcaption>
+                </figure>
+                <figure>
                     <img src="./img/img-myrtle-ave.jpg" alt="">
-                    <h4>Mirtle Ave Tea</h4>
-                </div>   
-                <div class="img">
+                    <figcaption>Mirtle Ave Tea</figcaption>
+                </figure>   
+                <figure>
                     <img src="./img/img-bedford-bizarre.jpg" alt="">
-                    <h4>Bedford Bizarre Tea</h4>
-                </div>  
-            </div> 
+                    <figcaption>Bedford Bizarre Tea</figcaption>
+                </figure>  
+            </div>
         </section>
         <section class="banner bottom-banner" id="locations">
             <div class="center">
-                <h2>Locations</h2>
+                <h2 class="loc">Locations</h2>
                 <div class="container">
-                    <div class="bg-black item m-right">
+                    <div class="bg-black item">
                         <h3>Downtown</h3>
                         <p>384 West 4th St</p>
                         <p>Suite 108</p>
                         <p>Portland, Maine</p>
                     </div>
-                    <div class="bg-black item m-right">
+                    <div class="bg-black item">
                         <h3>East Bayside</h3>
                         <p>3433 Phisherman's Avenue</p>
                         <p>(Northwest Corner)</p>
