--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="./img/img-tea-cozy-logo.png" alt="">
+        <a href="./index.html"><img class="logo" src="./img/img-tea-cozy-logo.png" alt=""></a>
         <nav>
             <ul>
                 <li><a href="#mission">Mission</a></li>
