--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
+    <div id="list-menu" class="center">
+        <ul>
+            <li><a class="list-menu" href="#mission">Mission</a></li>
+            <li><a class="list-menu" href="#featured">Featured Tea</a></li>
+            <li><a class="list-menu" href="#locations">Locations</a></li>
+        </ul>
+    </div>
     <header>
         <a href="./index.html"><img class="logo" src="./img/img-tea-cozy-logo.png" alt=""></a>
         <nav>
+            <p id="menu""> Menu</p>
             <ul>
                 <li><a href="#mission">Mission</a></li>
                 <li><a href="#featured">Featured Tea</a></li>
@@ -86,5 +94,6 @@
         </section>
     </main>
     <footer class="left">Copyright The Tea Cozy 2017</footer>
+    <script src="./index.js"></script>
 </body>
 </html>
